[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
ipython = "^8.23.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipython = "^8.23.0"
mypy = "^1.9.0"
black = "^24.3.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
